# power-of-friendship-loop

./: .gitignore  LICENSE  PROMPT.md  README.md  pof.toml  pyproject.toml
.codex-plugin/: plugin.json
commands/: pof.md
pof/: __init__.py  cli.py  config.py  harness.py
tests/: __init__.py  test_cli.py  test_harness.py
