[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "power-of-friendship-loop"
version = "0.1.0"
description = "A round-robin agent harness for Claude, Codex, and Gemini."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Henry Dowling" }]
dependencies = [
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
pof = "pof.cli:app"

[tool.setuptools.packages.find]
include = ["pof*"]
